# Madrid-Parking-Lots-DAG

./: .gitignore  README.md  airflow_settings_config.yaml  pyproject.toml
astro-project/dags/: madrid_parking_lots.py
dags/: madrid_parking_lots.py
dags/madrid_parking_lots/: madrid_parking_lots.py
dbt/madrid_parking_lots/: dbt_project.yml  profiles.yml
dbt/madrid_parking_lots/models/marts/: madrid_parking_lots.sql
dbt/madrid_parking_lots/models/staging/: src_calles_zona_ser__madrid_parking_lots.yml  stg_calles_zona_ser__madrid_parking_lots.sql  stg_calles_zona_ser__madrid_parking_lots.yml
include/: constants.py
