[tool.poetry]
name = "madrid-parking-lots-dag"
version = "0.1.0"
description = "ELT process Madrid Parking Lots"
authors = ["100451032@alumnos.uc3m.es"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.8"
dbt-core = "^1.3.0"
dbt-postgres = "^1.3.0"  # O el adaptador correspondiente a tu base de datos

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"